<resources>
    <string name="app_name">Biblioteca Virtual</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="VerifyPassword">Verify Password</string>
    <string name="imgprofile">imgprofile</string>
    <string name="google">google</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">PROFILE</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="lista">Lista</string>
    <string name="imgpanel">ImgPanel</string>
    <string name="libro">Libro</string>
    <string name="titulo">TITULO</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="ajustes">Ajustes</string>
    <string name="title_activity_leer">Leer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Loading...</string>
</resources>